--- a/curriculum/html/eng/clock.html
+++ b/curriculum/html/eng/clock.html
@@ -3,27 +3,7 @@
 <div class="section">
   <div class="section-title topicTitle"> Clock miniproject </div>
 
-  <table class="iconTable">
-    <tr>
-      <th class="iconTableHead"> Age group: </th>
-      <td>
-        <img src="curriculum/img/icons/age_2_3.png" height="84px" alt="11+">
-      </td>
-    </tr>
-    <tr>
-      <th class="iconTableHead"> Level: </th>
-      <td>
-        <img src="curriculum/img/icons/eng/level_2.png" height="84px" alt="novice">
-      </td>
-    </tr>
-    <tr>
-      <th class="iconTableHead"> Techniques: </th>
-      <td>
-        <img src="curriculum/img/icons/eng/motion.png" height="60px" alt="motion">
-        <img src="curriculum/img/icons/eng/math.png" height="60px" alt="math">
-      </td>
-    </tr>
-  </table>
+  <table class="iconTable"></table>
 
   <div class="celltitle"> What is this project about? </div>
   <div class="cell">
