--- a/curriculum/html/eng/flowershower.html
+++ b/curriculum/html/eng/flowershower.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title "> Flower Shower </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle topicTitle"> What is this project about? </div>
   <div class="cell">
     <p>
