--- a/curriculum/html/hun/birthday.html
+++ b/curriculum/html/hun/birthday.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Szülinapi üdvözlőlap </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Miről szól ez a projekt? </div>
   <div class="cell">
     <p>
