--- a/curriculum/html/ukr/birthday.html
+++ b/curriculum/html/ukr/birthday.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Листівка до дня народження </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Про що цей проект? </div>
   <div class="cell">
     <p>
