--- a/curriculum/html/ukr/flowershower.html
+++ b/curriculum/html/ukr/flowershower.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Квітковий душ </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Про що вона? </div>
   <div class="cell">
     <p>
