--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -25,6 +25,8 @@
   <script type="application/javascript" src="./js/curriculum_quiz_data.js"></script>
   <script type="application/javascript" src="./js/curriculum_quiz.js"></script>
   <script type="application/javascript" src="./js/curriculum_info.js"></script>
+  <script type="application/javascript" src="./js/curriculum_icontable_data.js"></script>
+  <script type="application/javascript" src="./js/curriculum_icontable.js"></script>
   <script type="application/javascript" src="./js/curriculum.js"></script>
   <script type="application/javascript" src="./js/curriculum_standalone.js"></script>
 
