--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
   <script type="application/javascript" src="curriculum/js/curriculum_info.js"></script>
   <script type="application/javascript" src="curriculum/js/curriculum_quiz_data.js"></script>
   <script type="application/javascript" src="curriculum/js/curriculum_quiz.js"></script>
+  <script type="application/javascript" src="curriculum/js/curriculum_icontable_data.js"></script>
+  <script type="application/javascript" src="curriculum/js/curriculum_icontable.js"></script>
   <script type="application/javascript" src="curriculum/js/curriculum.js"></script>
   <script type="application/javascript" src="scripts/main_script.js"></script>
 
