--- a/curriculum/html/eng/balloon.html
+++ b/curriculum/html/eng/balloon.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Balloon blowing </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> What is this project about? </div>
   <div class="cell">
     <p>
