--- a/curriculum/html/hun/balloon.html
+++ b/curriculum/html/hun/balloon.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Lufifújás villámprojekt </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Miről lesz szó? </div>
   <div class="cell">
     <p>
