--- a/curriculum/html/hun/bouncing.html
+++ b/curriculum/html/hun/bouncing.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Pattogó labda </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Miről szól ez a projekt? </div>
   <div class="cell">
     <p>
