--- a/curriculum/html/hun/eyeroll.html
+++ b/curriculum/html/hun/eyeroll.html
@@ -3,6 +3,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Szemforgató cica </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Miről szól a projekt? </div>
   <div class="cell">
     <p>
