--- a/curriculum/html/ukr/eyeroll.html
+++ b/curriculum/html/ukr/eyeroll.html
@@ -1,6 +1,8 @@
 <div class="section">
   <div class="section-title topicTitle"> Кішка, що закочує очі </div>
 
+  <table class="iconTable"></table>
+
   <div class="celltitle"> Про що цей проект?</div>
   <div class="cell">
     <p>
