--- a/curriculum/html/eng/quiz.html
+++ b/curriculum/html/eng/quiz.html
@@ -1,12 +1,15 @@
 <!-- This file is meant to be loaded in "curriculum.html". -->
 
 <div class="section">
-  <div class="section-title topicTitle"> Quiz project </div>
+  <div class="section-title topicTitle"> Advanced quiz project </div>
 
   <div class="celltitle"> What is this project about? </div>
   <div class="cell">
     <p>
-      It's a relatively simple project that can be done in one session, and gives you a lot of scope for creativity. As it uses variables and a list, this project is not for beginners. You will be making a multiple-choice quiz, which everyone can fill in with questions taken from their own favorite topic. You can see the final result here:
+      Kids love creating quizes, because they give them a lot of scope for creativity. However this version of the quiz project uses variables and a list in a slightly complex way, thus it is not for beginners. We recommend you to take the slightly less challenging simple quiz project before this one.
+    </p>
+    <p>
+      You will be making a multiple-choice quiz, which everyone can fill in with questions taken from their own favorite topic. You can see the final result here:
     </p>
     <iframe src="https://scratch.mit.edu/projects/995695696/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </div> <!-- cell -->
@@ -14,7 +17,7 @@
   <div class="celltitle">Step 1: Topic selection</div>
   <div class="cell">
     <p>
-      Before you sit down at the machines, discuss who will be taking a quiz on which topic. This could even serve as an icebreaker game at the beginning of the session. To make brainstorming easier, you start with your own topic and ask a question straight away. For example:
+      Before you sit down at the computers, discuss who will be taking a quiz on which topic. This could even serve as an icebreaker game at the beginning of the session. To make brainstorming easier, you can start with your own topic and ask a question straight away. For example:
       <ul>
         <li>Who was the first astronaut?
           <ul style="list-style-type:none;">
@@ -26,41 +29,10 @@
       </ul>
     </p>
     <p>
-      If the questions don't come easily, suggest a topic:
-      <div class="twocolumns">
-        <div class="column">
-          <ul>
-            <li>pokémons</li>
-            <li>Harry Potter</li>
-            <li>car brands</li>
-            <li>bicycle repair</li>
-            <li>football</li>
-            <li>math (pheeew...)</li>
-            <li>music performers</li>
-            <li>movies</li>
-            <li>K-pop</li>
-            <li>chess</li>
-          </ul>
-        </div>
-        <div class="column">
-          <ul>
-            <li>dogs</li>
-            <li>flowers</li>
-            <li>pets</li>
-            <li>TV shows</li>
-            <li>jungle</li>
-            <li>middle ages</li>
-            <li>video games</li>
-            <li>Japan</li>
-            <li>outer space</li>
-            <li>baking and cooking</li>
-          </ul>
-        </div>
-      </div>
-      and so on, something will work for everyone. You can also come up with topics together, write them on the board or on a piece of paper and then each of you can choose one.
+      Now it's the kids' turn. If the questions don't come easily for someone, you or other kids can suggest a topic. You find a long list with topic ideas in the "Simple quiz" project. You can write topics and questions on the board or on a piece of paper.
     </p>
     <p>
-      Once you have the topics, everyone formulates their first question. You can help the participants to do this together. Some examples:
+      You can each other coming up with the first questions. Some examples:
       <ul>
         <li>Who plays Ken in the Barbie movie?
           <ul style="list-style-type:none;">
@@ -254,7 +226,6 @@
       If you've even got this far in one session, you're amazingly super!<br>
       <img class="figure" width="30%" src="curriculum/img/eng/quiz/6_2.png" alt="figure">
     </p>
-    <p>Ha még eddig is eljutottatok egyetlen foglalkozás alatt, elképesztően szuperek vagytok!</p>
   </div> <!-- cell -->
 
     </div> <!-- section -->
