--- a/curriculum/html/eng/simplequiz.html
+++ b/curriculum/html/eng/simplequiz.html
@@ -172,7 +172,7 @@
       This step is the first exit point; if you make it until the end of it, you can close your session with success.
     </p>
     <p>
-      Good answers should be rewarded with score.
+      Good answers should be rewarded with score. This means that we need to introduce another variable.
     </p>
   </div> <!-- cell -->
 
