--- a/curriculum/html/hun/humanbuild2.html
+++ b/curriculum/html/hun/humanbuild2.html
@@ -1,7 +1,7 @@
 <div class="section">
-  <div class="section-title topicTitle">Building a humanoid robot: version 1</div>
+  <div class="section-title topicTitle">Robotember-építés: 2. változat</div>
 
-  <div class="celltitle">What is this project about?</div>
+  <div class="celltitle">Miről lesz szó?</div>
   <div class="cell">
     <video src="curriculum/img/eng/humanbuild2/result2_r.mp4" controls width="360"></video>
     <p>
@@ -9,7 +9,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 1: Design</div>
+  <div class="celltitle">1. lépés: tervezés</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/design1.jpg" width="45%" alt="figure">
@@ -17,7 +17,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 2: Legs</div>
+  <div class="celltitle">2. lépés: lábak</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_01.jpg" width="60%" alt="figure">
@@ -27,7 +27,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 3: Trunk</div>
+  <div class="celltitle">3. lépés: törzs</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_05.jpg" width="60%" alt="figure">
@@ -41,7 +41,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 4: Reinforcement</div>
+  <div class="celltitle">4. lépés: megerősítés</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_11.jpg" width="60%" alt="figure">
@@ -50,7 +50,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 5: Arms</div>
+  <div class="celltitle">5. lépés: karok</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_14.jpg" width="45%" alt="figure">
@@ -67,7 +67,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 6: Neck</div>
+  <div class="celltitle">6. lépés: nyak</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_21.jpg" width="45%" alt="figure">
@@ -80,7 +80,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 7: Reinforcement 2</div>
+  <div class="celltitle">7. lépés: megerősítés 2</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_26.jpg" width="45%" alt="figure">
@@ -88,7 +88,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 8: Head</div>
+  <div class="celltitle">8. lépés: fej</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_28.jpg" width="45%" alt="figure">
@@ -106,7 +106,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 9: Organizing cables</div>
+  <div class="celltitle">9. lépés: kábelrendezés</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild2/2_36.jpg" width="60%" alt="figure">
