--- a/curriculum/html/ukr/dogbuild.html
+++ b/curriculum/html/ukr/dogbuild.html
@@ -4,9 +4,9 @@
 -->
 
 <div class="section">
-  <div class="section-title topicTitle">Building a dog</div>
+  <div class="section-title topicTitle">Створення собак-роботів</div>
 
-  <div class="celltitle">What is this project about?</div>
+  <div class="celltitle">Про що цей проект?</div>
   <div class="cell">
     <video src="curriculum/img/eng/dogbuild/result_r.mp4" controls loop width="360"></video>
     <p>
@@ -14,7 +14,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 1: design</div>
+  <div class="celltitle">Крок 1: проектування</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/01.jpg" width="45%" alt="figure">
@@ -23,7 +23,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 2: bottom motor</div>
+  <div class="celltitle">Крок 2: опускаємо двигун</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/04.jpg" width="45%" alt="figure">
@@ -32,7 +32,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 3: front wheels</div>
+  <div class="celltitle">Крок 3: передні колеса</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/07.jpg" width="45%" alt="figure">
@@ -47,7 +47,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 4: rear wheel</div>
+  <div class="celltitle">Крок 4: заднє колесо</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/14.jpg" width="45%" alt="figure">
@@ -56,7 +56,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 5: hub</div>
+  <div class="celltitle">Крок 5: маточина</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/17.jpg" width="45%" alt="figure">
@@ -65,7 +65,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 6: head</div>
+  <div class="celltitle">Крок 6: голова</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/20.jpg" width="45%" alt="figure">
@@ -77,7 +77,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 7: rear motor and tail</div>
+  <div class="celltitle">Крок 7: задній двигун і хвіст</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/24.jpg" width="45%" alt="figure">
@@ -89,7 +89,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 8: Organizing cables</div>
+  <div class="celltitle">Крок 8: прокладання кабелів</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/28.jpg" width="45%" alt="figure">
@@ -98,7 +98,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 9: Ears</div>
+  <div class="celltitle">Крок 9: наконечники</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/31.jpg" width="45%" alt="figure">
@@ -106,7 +106,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 10: Passengers</div>
+  <div class="celltitle">Крок 10: пасажири</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/dogbuild/33.jpg" width="45%" alt="figure">
