--- a/curriculum/html/ukr/humanbuild1.html
+++ b/curriculum/html/ukr/humanbuild1.html
@@ -1,7 +1,7 @@
 <div class="section">
-  <div class="section-title topicTitle">Building a humanoid robot: version 1</div>
+  <div class="section-title topicTitle">Створення людини-робота: версія 1</div>
 
-  <div class="celltitle">What is this project about?</div>
+  <div class="celltitle">Про що цей проект?</div>
   <div class="cell">
     <video src="curriculum/img/eng/humanbuild1/result1_r.mp4" controls width="360"></video>
     <p>
@@ -9,7 +9,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 1: Design</div>
+  <div class="celltitle">Крок 1: проектування</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/design1.jpg" width="45%" alt="figure">
@@ -17,7 +17,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 2: Feet</div>
+  <div class="celltitle">Крок 2: взуття</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_01.jpg" width="60%" alt="figure">
@@ -26,7 +26,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 3: Legs</div>
+  <div class="celltitle">Крок 3: ноги</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_04.jpg" width="60%" alt="figure">
@@ -40,7 +40,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 4: Trunk</div>
+  <div class="celltitle">Крок 4: тулуб</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_10.jpg" width="60%" alt="figure">
@@ -48,7 +48,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 5: Reinforcement</div>
+  <div class="celltitle">Крок 5: зміцнення</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_12.jpg" width="60%" alt="figure">
@@ -60,7 +60,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 6: Neck</div>
+  <div class="celltitle">Крок 6: шия</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_16.jpg" width="45%" alt="figure">
@@ -76,7 +76,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 7: Head</div>
+  <div class="celltitle">Крок 7: голова</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_22.jpg" width="45%" alt="figure">
@@ -93,7 +93,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 8: Arms</div>
+  <div class="celltitle">Крок 8: руки</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_29.jpg" width="60%" alt="figure">
@@ -106,7 +106,7 @@
     </p>
   </div> <!-- cell -->
 
-  <div class="celltitle">Step 9: Organizing cables</div>
+  <div class="celltitle">Крок 9: Впорядковуємо кабелі</div>
   <div class="cell">
     <p>
       <img src="curriculum/img/eng/humanbuild1/1_34.jpg" width="45%" alt="figure">
