--- a/curriculum/html/eng/carbuild.html
+++ b/curriculum/html/eng/carbuild.html
@@ -7,6 +7,7 @@
   <div class="celltitle"> What is this project about? </div>
   <div class="cell">
     <p>
+      <video src="curriculum/img/eng/carbuild/result_r.mp4" controls loop width="480"></video>
     </p>
   </div> <!-- cell -->
 
