--- a/curriculum/curriculum_main.html
+++ b/curriculum/curriculum_main.html
@@ -44,6 +44,7 @@
       <div class="curriculumMenu curriculumSubMenu" id="subFifth"></div>
       <div class="curriculumMenu curriculumSubMenu" id="subSixth"></div>
       <div class="curriculumMenu curriculumSubMenu" id="subSeventh"></div>
+      <div class="curriculumMenu curriculumSubMenu" id="subEighth"></div>
       <div class="curriculumChapterContainer"></div>
     </div> <!-- curriculumDisplay -->
 
