--- a/curriculum/html/eng/ai_clicks.html
+++ b/curriculum/html/eng/ai_clicks.html
@@ -87,7 +87,7 @@
         <p>
             Time changes when the clock ticks. Based on the code of the click count, this will be easy: <br>
             <img class="figure" width="60%" src="curriculum/img/eng/ai_clicks/402.png" alt="figure"> <br>
-            Now you can see the time going down while the clicks are going up.
+            Now you can see the time going down while the clicks are going up. <br>
             <img class="figure" width="40%" src="curriculum/img/eng/ai_clicks/403.png" alt="figure">
         </p>
         <p>
