--- a/curriculum/html/hun/ai_clicks.html
+++ b/curriculum/html/hun/ai_clicks.html
@@ -87,7 +87,7 @@
         <p>
             Az idő akkor csökken, amikor az óra tiktakol. A kattintásszámlálás mintájára nem lesz nehéz ezt a kódot is összerakni: <br>
             <img class="figure" width="60%" src="curriculum/img/hun/ai_clicks/402.png" alt="figure"> <br>
-            Most már egyszerre láthatjátok, ahogy a kattintások száma emelkedik, a hátralévő másodperceké meg csökken.
+            Most már egyszerre láthatjátok, ahogy a kattintások száma emelkedik, a hátralévő másodperceké meg csökken. <br>
             <img class="figure" width="40%" src="curriculum/img/hun/ai_clicks/403.png" alt="figure">
         </p>
         <p>
