--- a/curriculum/html/ukr/ai_clicks.html
+++ b/curriculum/html/ukr/ai_clicks.html
@@ -84,7 +84,8 @@
         <p>
             Час змінюється, коли цокає годинник. На основі коду підрахунку кліків це буде легко зробити: <br>
             <img class="figure" width="60%" src="curriculum/img/ukr/ai_clicks/402.png" alt="figure"> <br>
-            Тепер ви можете бачити, як час зменшується, а кількість кліків збільшується. <img class="figure" width="40%" src="curriculum/img/ukr/ai_clicks/403.png" alt="figure"></p>
+            Тепер ви можете бачити, як час зменшується, а кількість кліків збільшується.  <br>
+            <img class="figure" width="40%" src="curriculum/img/ukr/ai_clicks/403.png" alt="figure"></p>
         <p>
             Але відлік не зупиняється на нулі; замість цього ви побачите від'ємні числа на мітці часу. Ви повинні явно вказати програмі, щоб вона зупинила відлік на нулі. Обговоріть з дітьми, як це зробити. Один із способів - вставити блок "якщо" з умовою, що час більший за нуль: <br>
             <img class="figure" width="45%" src="curriculum/img/ukr/ai_clicks/404.png" alt="figure"><br>
