heartbeat to supereasy projects

--- a/curriculum/html/eng/cornerstones.html
+++ b/curriculum/html/eng/cornerstones.html
@@ -13,7 +13,15 @@
     <div class="cornerstoneWord">Partnership</div>
     <div class="cornerstoneSentence">Develop partnership with the kids.</div>
     <ul class="cornerstoneList">
-      <li></li>
+      <li>
+        Make the learning process mutual. Be willing to learn from the kids.
+      </li>
+      <li>
+        Instead of being pleased by the kids' performance, root for the kids' success, and share their joy when it's achieved.
+      </li>
+      <li>
+        Gradually involve kids in decision-making.
+      </li>
     </ul>
   </div>
 
@@ -29,7 +37,9 @@
     <div class="cornerstoneWord">Discovery</div>
     <div class="cornerstoneSentence">Let kids discover knowledge.</div>
     <ul class="cornerstoneList">
-      <li></li>
+      <li>
+        Guide kids with questions.
+      </li>
     </ul>
   </div>
 
@@ -59,7 +69,7 @@
 
   <div class="cornerstone">
     <div class="cornerstoneWord">Safety</div>
-    <div class="cornerstoneSentence">Provide a safe environment.</div>
+    <div class="cornerstoneSentence"><i>Provide a safe environment.</i></div>
     <ul class="cornerstoneList">
       <li></li>
     </ul>
