--- a/curriculum/html/eng/heartbeat.html
+++ b/curriculum/html/eng/heartbeat.html
@@ -43,16 +43,20 @@
       --one short, one long. Set the values accordingly, for example 0.2 and 0.6 seconds (be careful, Scratch uses decimal points instead of the decimal comma you might have learned in school):<br>
       <img class="figure" width="25%" src="curriculum/img/eng/heartbeat/8.png" alt="figure"><br>
     </p>
+  </div> <!-- cell -->
+
+
+  <div class="celltitle">Further tweaks</div>
+  <div class="cell">
     <p>
-      And finally, the color change.Together, find the block that changes the color effect, set the amount of change to small, and create the second code with a new block "always" and "when clicking on green flag"::<br>
+      You can add color change to the animation. Together, find the block that changes the color effect, set the amount of change to a small number, and insert it in your code:<br>
       <img class="figure" width="35%" src="curriculum/img/eng/heartbeat/9.png" alt="figure"><br>
-      Copy the coloring code to the background to make the animation even more spectacular:
     </p>
     <p>
-      If you want, you can turn the protect into a very relaxing relaxing animation, slowing down the heartbeat and the color change, and making the difference between small and large very small::<br>
-      <img class="figure" width="60%" src="curriculum/img/eng/heartbeat/10.png" alt="figure"><br>
+      If you want, you can turn the protect into a very relaxing relaxing animation, slowing down the heartbeat and the color change, and making the difference between small and large very small:<br>
+      <img class="figure" width="35%" src="curriculum/img/eng/heartbeat/10.png" alt="figure"><br>
       Or you can make a vibrant and dynamic animation:<br>
-      <img class="figure" width="60%" src="curriculum/img/eng/heartbeat/11.png" alt="figure"><br>
+      <img class="figure" width="35%" src="curriculum/img/eng/heartbeat/11.png" alt="figure"><br>
       Aren't numbers such great things? Just by playing with numbers you can change the mood of a project! :)
     </p>
   </div> <!-- cell -->
