--- a/curriculum/html/hun/heartbeat.html
+++ b/curriculum/html/hun/heartbeat.html
@@ -43,16 +43,20 @@
       -- egy rövid, egy hosszú. Ennek megfelelően állítsátok be az értékeket, például 0.2 és 0.6 másodpercre (vigyázzatok, a Scratch angol szabály szerint tizedespontot használ az iskolában tanult tizedesvessző helyett):<br>
       <img class="figure" width="25%" src="curriculum/img/hun/heartbeat/8.png" alt="ábra"><br>
     </p>
+  </div> <!-- cell -->
+
+
+  <div class="celltitle">Finomhangolás</div>
+  <div class="cell">
     <p>
-      És végül a színváltoztatás. Közösen keressétek meg a színhatást megváltoztató blokkot, állítsátok kicsire benne a változtatás mértékét, és egy új "mindig" és "zöld zászlóra kattintáskor" blokkal készítsétek el a második kódot:<br>
+      Van még egy kis időtök és türelmetek? Sokat dob a projekten, ha a szív változtatja a színét. Közösen keressétek meg a színhatást megváltoztató blokkot, állítsátok kicsire benne a változtatás mértékét, és illesszétek a kódba:<br>
       <img class="figure" width="35%" src="curriculum/img/hun/heartbeat/9.png" alt="ábra"><br>
-      A színgatás kódját másoljátok át a háttérhez is, hogy még mozgalmasabb legyen az animáció.
     </p>
     <p>
       Ha akarjátok, egészen nyugis relaxáló animációt is csinálhattok a projektből, lelassítva a szívdobogást és a színváltoztatást, és egészen kicsire állítva a kicsi és a nagy méret közötti különbséget:<br>
-      <img class="figure" width="60%" src="curriculum/img/hun/heartbeat/10.png" alt="ábra"><br>
+      <img class="figure" width="35%" src="curriculum/img/hun/heartbeat/10.png" alt="ábra"><br>
       Vagy készíthettek vibráló, erőteljes animációt:<br>
-      <img class="figure" width="60%" src="curriculum/img/hun/heartbeat/11.png" alt="ábra"><br>
+      <img class="figure" width="35%" src="curriculum/img/hun/heartbeat/11.png" alt="ábra"><br>
       Ugye mlyen nagyszerű dolgok a számok? Csak számokkal játszva egészen meg lehet változtatni egy projekt hangulatát! :)
     </p>
   </div> <!-- cell -->
