--- a/curriculum/html/ukr/heartbeat.html
+++ b/curriculum/html/ukr/heartbeat.html
@@ -28,7 +28,6 @@
     </p>
   </div> <!-- cell -->
 
-
   <div class="celltitle">Кодування</div>
   <div class="cell">
     <p>
@@ -43,16 +42,19 @@
       -- один короткий, один довгий. Встановіть відповідні значення, наприклад, 0.2 і 0.6 секунди (будьте уважні, Скретч використовує десяткові крапки замість десяткової коми, яку ви могли вивчити у школі):<br>
       <img class="figure" width="25%" src="curriculum/img/ukr/heartbeat/8.png" alt="figure"><br>
     </p>
+  </div> <!-- cell -->
+
+  <div class="celltitle">Подальші налаштування</div>
+  <div class="cell">
     <p>
-      І, нарешті, зміна кольору. Разом знайдіть блок, який змінює колірний ефект, встановіть величину зміни на малу і створіть другий код з новим блоком "завжди" і "при натисканні на зелений прапорець":<br>
+      І, нарешті, зміна кольору. Разом знайдіть блок, який змінює колірний ефект, та встановіть величину зміни на малу:<br>
       <img class="figure" width="35%" src="curriculum/img/ukr/heartbeat/9.png" alt="figure"><br>
-      Скопіюйте код розмальовки на фон, щоб зробити анімацію ще більш ефект
     </p>
     <p>
       За бажанням ви можете перетворити захист на дуже розслаблюючу анімацію, сповільнивши серцебиття і зміну кольору, а також зробивши різницю між маленьким і великим дуже маленькою:<br>
-      <img class="figure" width="60%" src="curriculum/img/ukr/heartbeat/10.png" alt="figure"><br>
+      <img class="figure" width="35%" src="curriculum/img/ukr/heartbeat/10.png" alt="figure"><br>
       Або ви можете зробити яскраву і динамічну анімацію:<br>
-      <img class="figure" width="60%" src="curriculum/img/ukr/heartbeat/11.png" alt="figure"><br>
+      <img class="figure" width="35%" src="curriculum/img/ukr/heartbeat/11.png" alt="figure"><br>
       Хіба числа не чудові речі? Просто граючи з числами, ви можете змінити настрій проекту! :)
     </p>
   </div> <!-- cell -->
